@@ -175,6 +175,8 @@ SelectorUpdateTableSingleObject-Debug: leaving...
  SelectorCreate: "pept" created with 107 atoms.
 SelectorUpdateTableSingleObject-Debug: entered for pept...
 SelectorUpdateTableSingleObject-Debug: leaving...
+SelectorUpdateTableSingleObject-Debug: entered for pept...
+SelectorUpdateTableSingleObject-Debug: leaving...
  CmdLoad: "dat/pept.pdb" loaded as "pept".
 PyMOL>show cartoon
  SelectorGetTmp-Debug: entered with "all".
